Signed-off-by: Christina <caisha077@126.com>

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 
 <body>
-	<title>谁偷了我的奶酪</title>
+	<h1>谁偷了我的奶酪</h1>
 
 	<p>很久以前，在一块遥远的土地上，住着四个小生灵。他们在一片迷宫里忙忙碌碌，寻找着奶酪来养活他们自己，并自得其乐。</p>
 	<div id="root"></div>
-	
+
 </body>
 </html>
